Switch relation to files Rename ground.jpg

--- a/babylon-world-demo/index.html
+++ b/babylon-world-demo/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>Babylon - Environment</title>
     
-    <script src="../hand.js"></script>
-    <script src="../babylon.js"></script>
+    <script src="hand.js"></script>
+    <script src="babylon.js"></script>
 
     <script type="text/javascript" src="mainTutos.js"></script>
     <!-- <script type="text/javascript" src="water/water.js"></script> -->
