--- a/babylon-world-demo/index.html
+++ b/babylon-world-demo/index.html
@@ -3,13 +3,13 @@
 <head>
     <title>Babylon - Environment</title>
     
-    <script src="hand.js"></script>
-    <script src="babylon.js"></script>
+    <script src="js/hand.js"></script>
+    <script src="js/babylon.js"></script>
 
-    <script type="text/javascript" src="mainTutos.js"></script>
+    <script type="text/javascript" src="js/mainTutos.js"></script>
     <!-- <script type="text/javascript" src="water/water.js"></script> -->
-    <script type="text/javascript" src="RealWater/waterMaterial.js"></script>
-    <script type="text/javascript" src="environment.js"></script>
+    <script type="text/javascript" src="js/waterMaterial.js"></script>
+    <script type="text/javascript" src="js/environment.js"></script>
 
     <style type="text/css">
         html,body,#canvas {
