--- a/babylon-world-demo/index.html
+++ b/babylon-world-demo/index.html
@@ -1,27 +1,26 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Babylon - Environment</title>
-    
-    <script src="js/hand.js"></script>
-    <script src="js/babylon.js"></script>
+  <title>Babylon - Environment</title>
 
-    <script type="text/javascript" src="js/mainTutos.js"></script>
-    <!-- <script type="text/javascript" src="water/water.js"></script> -->
-    <script type="text/javascript" src="js/waterMaterial.js"></script>
-    <script type="text/javascript" src="js/environment.js"></script>
+  <script src="js/hand.js"></script>
+  <script src="js/babylon.js"></script>
+  <script src="js/mainTutos.js"></script>
+  <script src="js/waterMaterial.js"></script>
+  <script src="js/environment.js"></script>
 
-    <style type="text/css">
-        html,body,#canvas {
-            width:100%;
-            height:100%;
-            padding:0;
-            margin:0;
-            overflow: hidden;
-        }
-    </style>
+  <style type="text/css">
+      html,
+      body,
+      #canvas {
+        width:100%;
+        height:100%;
+        padding:0;
+        margin:0;
+      }
+  </style>
 </head>
 <body>
-    <canvas id="canvas"></canvas>
+  <canvas id="canvas"></canvas>
 </body>
 </html>
