--- a/babylon-world-demo/index.html
+++ b/babylon-world-demo/index.html
@@ -3,8 +3,8 @@
 <head>
   <title>Babylon - Environment</title>
 
-  <script src="js/hand.js"></script>
-  <script src="js/babylon.js"></script>
+  <script src="js/lib/hand.js"></script>
+  <script src="js/lib/babylon.js"></script>
   <script src="js/mainTutos.js"></script>
   <script src="js/waterMaterial.js"></script>
   <script src="js/environment.js"></script>
