Rename files and functions for more clarity

--- a/babylon-world-demo/index.html
+++ b/babylon-world-demo/index.html
@@ -5,7 +5,7 @@
 
   <script src="js/lib/hand.js"></script>
   <script src="js/lib/babylon.js"></script>
-  <script src="js/mainTutos.js"></script>
+  <script src="js/main.js"></script>
   <script src="js/waterMaterial.js"></script>
   <script src="js/environment.js"></script>
 
