Add base tag to subway d3 demo

--- a/d3/subway/index.html
+++ b/d3/subway/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <base href="/d3/subway/" target="" />
     <link rel="stylesheet" href="train_colours.css" title="" type="text/css" />
     <style type="text/css" media="all">
       .axis path, .line{
