Add hover styles to D3 legend

--- a/d3/subway/index.html
+++ b/d3/subway/index.html
@@ -15,8 +15,13 @@
         fill: none;
         } .key{
         float:right; }
-      .key_line{ font-size:17px;
+      .key_line{
+        font-size:17px;
         width:100%; }
+      .key_line:hover{
+        color: lightgray;
+        cursor: pointer;
+      }
       .key_square{ height:10px;
         width:10px;
         outline:solid 1px black; float:left;
