Fix first item from breaking the masonry grid

--- a/masonry-demo/index.html
+++ b/masonry-demo/index.html
@@ -29,6 +29,7 @@
     </header>
     <main role="main">
       <section class="wrapper">
+        <div class="grid-sizer"></div>
         <div class="item red"></div>
         <div class="item green"></div>
         <div class="item blue"></div>
