Add link to masonry demo

--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@
   <li><a href="geojson-demo">GeoJSON Demo</a></li>
   <li><a href="babylon-world-demo">BabyjonJS Demo</a></li>
   <li><a href="d3/subway">D3 Demo</a></li>
+  <li><a href="masonry-demo">MasonryJS Demo</a></li>
 </ul>
