update to allow transitions for elements getting bigger and smaller

--- a/masonry-demo/index.html
+++ b/masonry-demo/index.html
@@ -30,35 +30,61 @@
     <main role="main">
       <section class="wrapper">
         <div class="grid-sizer"></div>
-        <div class="item red"></div>
-        <div class="item green"></div>
-        <div class="item blue"></div>
-        <div class="item yellow"></div>
-        <div class="item yellow"></div>
-        <div class="item blue"></div>
-        <div class="item green"></div>
-        <div class="item red"></div>
-        <div class="item red"></div>
-        <div class="item green"></div>
-        <div class="item blue"></div>
-        <div class="item yellow"></div>
-        <div class="item yellow"></div>
-        <div class="item blue"></div>
-        <div class="item green"></div>
-        <div class="item red"></div>
+        <div class="item">
+          <div class="item-content red"></div>
+        </div>
+        <div class="item">
+          <div class="item-content green"></div>
+        </div>
+        <div class="item">
+          <div class="item-content blue"></div>
+        </div>
+        <div class="item">
+          <div class="item-content yellow"></div>
+        </div>
+        <div class="item">
+          <div class="item-content yellow"></div>
+        </div>
+        <div class="item">
+          <div class="item-content blue"></div>
+        </div>
+        <div class="item">
+          <div class="item-content green"></div>
+        </div>
+        <div class="item">
+          <div class="item-content red"></div>
+        </div>
+        <div class="item">
+          <div class="item-content red"></div>
+        </div>
+        <div class="item">
+          <div class="item-content green"></div>
+        </div>
+        <div class="item">
+          <div class="item-content blue"></div>
+        </div>
+        <div class="item">
+          <div class="item-content yellow"></div>
+        </div>
+        <div class="item">
+          <div class="item-content yellow"></div>
+        </div>
+        <div class="item">
+          <div class="item-content blue"></div>
+        </div>
+        <div class="item">
+          <div class="item-content green"></div>
+        </div>
+        <div class="item">
+          <div class="item-content red"></div>
+        </div>
       </section>
-      <a id="all" href="#">Sort All</a>
-      <a id="green" href="#">Sort Green</a>
-      <a id="blue" href="#">Sort Blue</a>
-      <a id="yellow" href="#">Sort Yellow</a>
-      <a id="red" href="#">Sort Red</a>
     </main>
     <footer role="contentinfo">
     </footer>
 
     <script src="dist/js/app.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/masonry/3.1.5/masonry.pkgd.min.js"></script>
-    <!-- <script src="./bower_components/isotope/dist/isotope.pkgd.js"></script> -->
     <!--[if lt IE 9]>
       <script src="dist/js/app.ie.js"></script>
     <![endif]-->
