--- a/masonry-demo/index.html
+++ b/masonry-demo/index.html
@@ -79,12 +79,14 @@
           <div class="item-content red"></div>
         </div>
       </section>
+      <a class="more-boxes" href="">More Boxes</a>
     </main>
     <footer role="contentinfo">
     </footer>
 
     <script src="dist/js/app.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/masonry/3.1.5/masonry.pkgd.min.js"></script>
+    <script src="src/js/lib/masonry.pkgd.min.js"></script>
+    <!-- <script src="src/js/lib/masonry.pkgd.js"></script> -->
     <!--[if lt IE 9]>
       <script src="dist/js/app.ie.js"></script>
     <![endif]-->
