get masonry demo working with isotope - so it's really more of an isotope demo now

--- a/masonry-demo/index.html
+++ b/masonry-demo/index.html
@@ -30,62 +30,68 @@
     <main role="main">
       <section class="wrapper">
         <div class="grid-sizer"></div>
-        <div class="item">
+        <div class="item red-container">
           <div class="item-content red"></div>
         </div>
-        <div class="item">
+        <div class="item green-container">
           <div class="item-content green"></div>
         </div>
-        <div class="item">
+        <div class="item blue-container">
           <div class="item-content blue"></div>
         </div>
-        <div class="item">
+        <div class="item yellow-container">
           <div class="item-content yellow"></div>
         </div>
-        <div class="item">
+        <div class="item yellow-container">
           <div class="item-content yellow"></div>
         </div>
-        <div class="item">
+        <div class="item blue-container">
           <div class="item-content blue"></div>
         </div>
-        <div class="item">
+        <div class="item green-container">
           <div class="item-content green"></div>
         </div>
-        <div class="item">
+        <div class="item red-container">
           <div class="item-content red"></div>
         </div>
-        <div class="item">
+        <div class="item red-container">
           <div class="item-content red"></div>
         </div>
-        <div class="item">
+        <div class="item green-container">
           <div class="item-content green"></div>
         </div>
-        <div class="item">
+        <div class="item blue-container">
           <div class="item-content blue"></div>
         </div>
-        <div class="item">
+        <div class="item yellow-container">
           <div class="item-content yellow"></div>
         </div>
-        <div class="item">
+        <div class="item yellow-container">
           <div class="item-content yellow"></div>
         </div>
-        <div class="item">
+        <div class="item blue-container">
           <div class="item-content blue"></div>
         </div>
-        <div class="item">
+        <div class="item green-container">
           <div class="item-content green"></div>
         </div>
-        <div class="item">
+        <div class="item red-container">
           <div class="item-content red"></div>
         </div>
       </section>
-      <a class="more-boxes" href="">More Boxes</a>
+      <a class="more-boxes" href="">More Boxes</a><br />
+      <a class="sort-red" href="">Sort Red</a><br />
+      <a class="sort-green" href="">Sort Green</a><br />
+      <a class="sort-blue" href="">Sort Blue</a><br />
+      <a class="sort-yellow" href="">Sort Yellow</a><br />
+      <a class="sort-all" href="">Sort All</a><br />
     </main>
     <footer role="contentinfo">
     </footer>
 
     <script src="dist/js/app.js"></script>
-    <script src="src/js/lib/masonry.pkgd.min.js"></script>
+    <script src="src/js/lib/isotope.pkgd.min.js"></script>
+    <!-- <script src="src/js/lib/masonry.pkgd.min.js"></script> -->
     <!-- <script src="src/js/lib/masonry.pkgd.js"></script> -->
     <!--[if lt IE 9]>
       <script src="dist/js/app.ie.js"></script>
