Add base tag for babylon demo

--- a/babylon-world-demo/index.html
+++ b/babylon-world-demo/index.html
@@ -1,7 +1,9 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+  <base href="/babylon-world-demo/" target="" />
   <title>Babylon - Environment</title>
+
 
   <script src="js/lib/hand.js"></script>
   <script src="js/lib/babylon.js"></script>
