Add link for tea timer

--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
   <li><a href="babylon-world-demo">BabyjonJS Demo</a></li>
   <li><a href="d3/subway">D3 Demo</a></li>
   <li><a href="masonry-demo">MasonryJS Demo</a></li>
+  <li><a href="tea-timer">Tea Timer</a></li>
 </ul>
