--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
   <li><a href="d3/subway">D3 Demo</a></li>
   <li><a href="masonry-demo">MasonryJS Demo</a></li>
   <li><a href="tea-timer">Tea Timer</a></li>
+  <li><a href="tea-chart">Tea Steep Chart</a></li>
 </ul>
