Update new labs index with relevant data

--- a/html5up-strongly-typed/index.html
+++ b/html5up-strongly-typed/index.html
@@ -50,14 +50,14 @@
 
               <!-- Feature -->
                 <section>
-                  <a href="#" class="image featured"><img
+                  <a href="geojson-demo" class="image featured"><img
                     src="images/google_maps_th.jpg" alt="" /></a>
                   <header>
-                    <h3>Okay, so what is this?</h3>
+                    <h3>GeoJSON Demo</h3>
                   </header>
-                  <p>This is <strong>Strongly Typed</strong>, a free, fully responsive site template
-                  by <a href="http://html5up.net">HTML5 UP</a>. Free for personal and commercial use under the
-                  <a href="http://html5up.net/license">CCA 3.0 license</a>.</p>
+                  <p>This is a little demo using the <strong>Google Maps
+                    API</strong> and GeoJSON files. Check out how I use them to
+                  color specific geographical regions.</p>
                 </section>
 
             </div>
@@ -65,13 +65,13 @@
 
               <!-- Feature -->
                 <section>
-                  <a href="#" class="image featured"><img src="images/babylon_th.jpg" alt="" /></a>
+                  <a href="babylon-world-demo" class="image featured"><img src="images/babylon_th.jpg" alt="" /></a>
                   <header>
-                    <h3>Nice! What is HTML5 UP?</h3>
+                    <h3>BabylonJS Demo</h3>
                   </header>
-                  <p><a href="http://html5up.net">HTML5 UP</a> is a side project of <a href="http://n33.co">AJ’s</a> (= me).
-                  I started it as a way to both test my <strong>skel</strong> framework and sharpen up my coding
-                  and design skills a bit.</p>
+                  <p><a href="http://babylonjs.com/" target="blank">BabylonJS</a> is a popular library for
+                  creating 3D environments using <strong>WebGL</strong>. Use first person
+                  shooter controls to move, and spacebar to toggle gravity!</p>
                 </section>
 
             </div>
@@ -79,13 +79,13 @@
 
               <!-- Feature -->
                 <section>
-                  <a href="#" class="image featured"><img src="images/d3_th.jpg" alt="" /></a>
+                  <a href="d3/subway" class="image featured"><img src="images/d3_th.jpg" alt="" /></a>
                   <header>
-                    <h3>Skel? What's that?</h3>
+                    <h3>Interactive D3 Demo</h3>
                   </header>
-                  <p><strong>Skel</strong> is a lightweight framework for building responsive
-                  sites and apps. All of my stuff at <a href="http://html5up.net">HTML5 UP</a> (including this
-                  one) are built on this framework.</p>
+                  <p><a href="http://d3js.org/" target="blank">D3.js</a> is
+                  a javascript library for creating SVG graphics based on data
+                  from json documents.</p>
                 </section>
 
             </div>
@@ -95,14 +95,15 @@
 
               <!-- Feature -->
                 <section>
-                  <a href="#" class="image featured"><img
+                  <a href="masonry-demo" class="image featured"><img
                     src="images/masonry_th.jpg" alt="" /></a>
                   <header>
-                    <h3>Okay, so what is this?</h3>
+                    <h3>MasonryJS Demo</h3>
                   </header>
-                  <p>This is <strong>Strongly Typed</strong>, a free, fully responsive site template
-                  by <a href="http://html5up.net">HTML5 UP</a>. Free for personal and commercial use under the
-                  <a href="http://html5up.net/license">CCA 3.0 license</a>.</p>
+                  <p><a href="http://masonry.desandro.com/"
+                    target="blank">MasonryJS</a> is a sweet JS library which
+                  uses intense math behind the scenes to lay out your web page in a dynamic tile
+                  structure.</p>
                 </section>
 
             </div>
@@ -110,14 +111,14 @@
 
               <!-- Feature -->
                 <section>
-                  <a href="#" class="image featured"><img
+                  <a href="tea-timer" class="image featured"><img
                     src="images/tea_timer_th.jpg" alt="" /></a>
                   <header>
-                    <h3>Nice! What is HTML5 UP?</h3>
+                    <h3>Tea Timers</h3>
                   </header>
-                  <p><a href="http://html5up.net">HTML5 UP</a> is a side project of <a href="http://n33.co">AJ’s</a> (= me).
-                  I started it as a way to both test my <strong>skel</strong> framework and sharpen up my coding
-                  and design skills a bit.</p>
+                  <p>I love <strong>Tea</strong>, so I thought I would build
+                  some tea timers to complement my tea chart and help any other
+                  tea enthusiasts with preparing loose-leaf tea.</p>
                 </section>
 
             </div>
@@ -125,14 +126,14 @@
 
               <!-- Feature -->
                 <section>
-                  <a href="#" class="image featured"><img
+                  <a href="tea-chart" class="image featured"><img
                     src="images/tea_chart_th.jpg" alt="" /></a>
                   <header>
-                    <h3>Skel? What's that?</h3>
+                    <h3>Tea Chart</h3>
                   </header>
-                  <p><strong>Skel</strong> is a lightweight framework for building responsive
-                  sites and apps. All of my stuff at <a href="http://html5up.net">HTML5 UP</a> (including this
-                  one) are built on this framework.</p>
+                  <p>This was my first step in the world of Bootstrap, so I
+                  built a tiny page to show off the different tea types and best
+                  steeping practices.</p>
                 </section>
 
             </div>
@@ -142,14 +143,15 @@
 
               <!-- Feature -->
                 <section>
-                  <a href="#" class="image featured"><img
+                  <a href="carnegie-chart" class="image featured"><img
                     src="images/carnegie_chart_th.jpg" alt="" /></a>
                   <header>
-                    <h3>Okay, so what is this?</h3>
+                    <h3>Dale Carnegie Chart</h3>
                   </header>
-                  <p>This is <strong>Strongly Typed</strong>, a free, fully responsive site template
-                  by <a href="http://html5up.net">HTML5 UP</a>. Free for personal and commercial use under the
-                  <a href="http://html5up.net/license">CCA 3.0 license</a>.</p>
+                  <p>For those of you who have read <a
+                    target="blank" href="http://www.amazon.com/How-Win-Friends-Influence-People/dp/0671027034">How to Win
+                    Friends and Influence People</a>, you know how powerful it
+                  is. This chart will help you practice that book.</p>
                 </section>
 
             </div>
@@ -157,20 +159,20 @@
 
               <!-- Feature -->
                 <section>
-                  <a href="#" class="image featured"><img
+                  <a href="http://wiki.thesocietea.org" class="image featured"><img
                     src="images/go_wiki_th.jpg" alt="" /></a>
                   <header>
-                    <h3>Nice! What is HTML5 UP?</h3>
+                    <h3>Go Wiki</h3>
                   </header>
-                  <p><a href="http://html5up.net">HTML5 UP</a> is a side project of <a href="http://n33.co">AJ’s</a> (= me).
-                  I started it as a way to both test my <strong>skel</strong> framework and sharpen up my coding
-                  and design skills a bit.</p>
+                  <p>My first real <strong>Go</strong> project! Go Wiki is a
+                  fully functioning wiki server built in Go that is tied to a <strong>MongoDB</strong>
+                  collection to persist data.</p>
                 </section>
 
             </div>
           </div>
           <ul class="actions">
-            <li><a href="#" class="button icon fa-file">Check out the GitHub
+            <li><a href="https://github.com/alkrauss48/labs" class="button icon fa-file">Check out the GitHub
               Repo</a></li>
           </ul>
         </section>
@@ -180,8 +182,7 @@
       <div id="banner-wrapper">
         <div class="inner">
           <section id="banner" class="container">
-            <p>Use this space for <strong>profound thoughts</strong>.<br />
-            Or an enormous ad. Whatever.</p>
+            <p>Welcome to my laboratory.<br />No beakers. No test tubes. Just code.</p>
           </section>
         </div>
       </div>
@@ -189,7 +190,7 @@
       <div id="footer-wrapper">
         <div id="footer" class="container">
           <header>
-            <h2>If you enjoyed these projects, <a href="#">Check out my main site</a></h2>
+            <h2>If you enjoyed these projects, <a target="blank" href="http://thesocietea.org">Check out my main site</a></h2>
           </header>
             <div class="12u">
               <section>
@@ -197,17 +198,17 @@
                 design-based CMS sites to hardcore back-end apps and APIs. I
                 only post small personal demos and projects here, but if you want to
                 see the cool things I've done at various companies or larger
-                projects, check out my <a href="http://thesocietea.org">main
-                site</a> or my <a href="https://github.com/alkrauss">GitHub page</a></p>
+                projects, check out my <a target="blank" href="http://thesocietea.org">main
+                site</a> or my <a target="blank" href="https://github.com/alkrauss48">GitHub page</a></p>
                 <div style="text-align: center;" class="row">
                   <div class="icon 4u fa-envelope">
-                    <a href="#"> alkrauss48@gmail.com</a>
+                    <a href="mailto:alkrauss48@gmail.com"> alkrauss48@gmail.com</a>
                   </div>
                   <div class="icon 4u fa-twitter">
-                    <a href="#"> @thecodeboss</a>
+                    <a target="blank" href="https://twitter.com/thecodeboss"> @thecodeboss</a>
                   </div>
                   <div class="icon 4u fa-github">
-                    <a href="#"> alkrauss48</a>
+                    <a target="blank" href="https://github.com/alkrauss48"> alkrauss48</a>
                   </div>
                 </div>
               </section>
@@ -216,7 +217,7 @@
         </div>
         <div id="copyright" class="container">
           <ul class="links">
-            <li>&copy; Aaron Krauss. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            <li>&copy; <a href="http://thesocietea.org">Aaron Krauss</a>. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
           </ul>
         </div>
       </div>
