--- a/flip-typed-demo/index.html
+++ b/flip-typed-demo/index.html
@@ -42,8 +42,7 @@
       <a href="#" class="flip-me">Flip</a>
     </div>
 
-    <!-- <script src="dist/js/app.js"></script> -->
-    <script src="build/app.js"></script>
+    <script src="dist/js/app.js"></script>
     <!--[if lt IE 9]>
       <script src="dist/js/app.ie.js"></script>
     <![endif]-->
