--- a/socketio/public/index.html
+++ b/socketio/public/index.html
@@ -3,17 +3,32 @@
   <meta charset="utf-8">
 
   <title>WebSockets Demo</title>
-
+  <link rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/cosmo/bootstrap.min.css"
+  type="text/css" />
 </head>
 <body>
-  <h1>WebSocket Demo</h1>
-  <div class="messages">
-
-  </div>
-  <form class="submit-message" method="post">
-    <input type="text" name="" id="my-message" value="" />
-    <input type="submit" name="" id="" value="Submit" />
-  </form>
+  <main class="container" role="main">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>WebSocket Demo</h1>
+        <p>Enter a message in the input field below.<br />Your message will display
+        beneath this paragraph in your browser AND in all browsers currently on
+        this same page - without refreshing.<br />The power of WebSockets! <a
+        href="https://github.com/alkrauss48/labs/tree/master/socketio"
+        target="blank">View the Code</a></p>
+        <table class="messages table table-striped table-bordered">
+        </table>
+        <form class="submit-message" method="post">
+          <div class="form-group">
+            <label for="my-message">Message</label>
+            <input type="text" class="form-control" placeholder="Message..." name="" id="my-message" value="" />
+          </div>
+          <input class="btn btn-success" type="submit" name="" id="" value="Submit" />
+        </form>
+      </div>
+    </div>
+  </main>
 
   <script src="https://code.jquery.com/jquery-1.12.0.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="/socket.io/socket.io.js" type="text/javascript" charset="utf-8"></script>
