--- a/socketio/public/index.html
+++ b/socketio/public/index.html
@@ -33,5 +33,6 @@
   <script src="https://code.jquery.com/jquery-1.12.0.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="/socket.io/socket.io.js" type="text/javascript" charset="utf-8"></script>
   <script src="main.js" type="text/javascript" charset="utf-8"></script>
+  <script src="http://labs.thesocietea.org/analytics.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
