Switch order of instructions on sockets app

--- a/socketio/public/index.html
+++ b/socketio/public/index.html
@@ -12,8 +12,8 @@
     <div class="row">
       <div class="col-md-12">
         <h1>WebSocket Demo</h1>
-        <p>Enter a message in the input field below.<br />Now open this same
-        page up in multiple browser windows.<br />Your message will display
+        <p>Open this same page up in multiple browser windows.<br />Now enter a
+        message in the input field below.<br />Your message will display
         beneath this paragraph in your browser AND in all browsers currently on
         this same page - without refreshing.<br />The power of WebSockets! <a
         href="https://github.com/alkrauss48/labs/tree/master/socketio"
