--- a/socketio/public/index.html
+++ b/socketio/public/index.html
@@ -3,6 +3,8 @@
   <meta charset="utf-8">
 
   <title>WebSockets Demo</title>
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimal-ui">
+
   <link rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/cosmo/bootstrap.min.css"
   type="text/css" />
